Fixed a bug with the sorting of newly added todos and aligned the attribution section to the center

--- a/app/scss/layout/_layout.scss
+++ b/app/scss/layout/_layout.scss
@@ -179,4 +179,5 @@ form.filter--mobile--todo {
 
 .attribution {
     margin-top: 1rem;
+    text-align: center;
 }
